--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -24,7 +24,4 @@ jobs:
         with:                                
           token: ${{ secrets.GITHUB_TOKEN }}
           target_branch: gh-pages
-      - uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: .
-          clean: true
+      - uses: actions/deploy-pages@v1
