--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -33,6 +33,9 @@ jobs:
           
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     needs: github-pages
     steps:
       - name: Deploy gh-pages
